refactor: AutoLottos가 Lottos를 포함하도록 변경