@@ -4,21 +4,23 @@ import static java.util.stream.Collectors.*;
 import static lotto.ValidationUtils.*;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.EnumMap;
 import java.util.List;
 import java.util.Map;
+
+import lotto.model.lottos.AutoLottos;
+import lotto.model.lottos.Lottos;
 
 public class LottoResult {
     private static final String ERROR_DUPLICATION_BONUS_NUMBER = "보너스 볼 번호가 당첨 번호와 중복입니다.";
 
     private final Map<Rank, Long> result;
 
-    public LottoResult(Lottos lottos, List<Integer> integers, int bonusNumber) {
+    public LottoResult(Lottos manualLottos, AutoLottos autoLottos, List<Integer> integers, int bonusNumber) {
         List<Integer> winningNumbers = new ArrayList<>(integers);
         validateEmptyCollection(winningNumbers);
         validateDuplicateBonusNumber(winningNumbers, bonusNumber);
-        this.result = generateLottoResult(lottos, new Lotto(winningNumbers), new LottoNumber(bonusNumber));
+        this.result = generateLottoResult(manualLottos, autoLottos, new Lotto(winningNumbers), new LottoNumber(bonusNumber));
     }
 
     private void validateDuplicateBonusNumber(List<Integer> winningNumbers, int bonusNumber) {
@@ -27,8 +29,9 @@ public class LottoResult {
         }
     }
 
-    private Map<Rank, Long> generateLottoResult(Lottos lottos, Lotto winningNumbers, LottoNumber bonusNumber) {
-        return Collections.unmodifiableMap(lottos.getLottos().stream()
+    private Map<Rank, Long> generateLottoResult(Lottos manualLottos, AutoLottos autoLottos, Lotto winningNumbers,
+        LottoNumber bonusNumber) {
+        return Map.copyOf(manualLottos.getTotalLottos(autoLottos).stream()
             .map(lotto -> lotto.match(winningNumbers, bonusNumber))
             .collect(groupingBy(rank -> rank, () -> new EnumMap<>(Rank.class), counting())));
     }
